<resources>
    <string name="app_name">Scientific calculator</string>

    <!-- Сообщения об ошибках-->
        <!-- Ошибки в введенной строке-->
    <string name="error_different_number_brackets">Различное количество открытых и закрытых скобок. Каждую открытую скобку нужно закрыть перед вычислением. Функции, например квадратный корень, открывают скобку</string>
    <string name="error_undersquare_low_zero">Подкоренное выражение меньше нуля</string>
    <string name="error_divide_on_zero">Деление на ноль</string>
    <string name="error_inside_brackets_empty">Внутри скобок ничего нет</string>
        <!-- Ошибки в процессе введения данных-->
    <string name="error_number_after_bracket">После скобки нельзя ставить сразу число без предварительного указания действия с ним</string>
    <string name="error_many_zero_in_integer_part">Для задания целой части числа хватит и одного нуля</string>
    <string name="error_input_number_first">Нужно сначала ввести число</string>
    <string name="error_needs_two_numbers">Для применения процента нужно ввести два числа с любой из 4-х арифметических операций между ними (*, /, +, -)</string>
    <string name="error_needs_two_numbers_out_bracket">Для применения процента после скобки нужно, чтобы другое число было ранее введено до этой скобки</string>
    <string name="error_change_sign_empty">Нельзя производить смену знака, предварительно не задав число или функцию. Ноль не может иметь отрицательный знак</string>
    <string name="error_open_bracket_on_empty_action">Нельзя создать новую открытую скобку, потому что не указано перед скобкой действие</string>
    <string name="error_close_bracket_on_empty_open_bracket">Нельзя поставить закрывающую скобку, если предварительно не поставить ей соответствующую открывающую скобку</string>
    <string name="error_close_bracket_on_empty">Нельзя ставить закрывающую скобку, если в скобке ничего нет, в скобке как минимум должно быть одно число</string>
    <string name="error_close_bracket_on_action_without_number">Закрывающую скобку нельзя ставить на действии без указания числа</string>
    <string name="error_multiple_percent_in_bracket">Без скобок или в рамках одной скобки нельзя вводить знак процента больше одного раза. Если нужно произвести вычисление процента несколько раз, то нужно каждую такую конструкцию оборачивать в отдельную скобку</string>

    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_divide">/</string>
    <string name="_minus">-</string>
    <string name="_zapitay">,</string>
    <string name="_equal">=</string>
    <string name="_multiply">*</string>
    <string name="_plus">+</string>
    <string name="_bracket_open">(</string>
    <string name="_bracket_close">)</string>
    <string name="_percent">%</string>
    <string name="_plus_minus">+/-</string>
    <string name="_stepen">xn</string>
    <string name="_sqrt">\u221Ax</string>
    <string name="_backspaceTwo"><![CDATA[<—]]></string>
    <string name="_backspace">C</string>
    <string name="InputHistory_text" />
    <string name="RESULT_text">0</string>
    <string name="_backspaceOne"><![CDATA[<-]]></string>
    <string name="_settings">Настройки</string>
    <string name="turn_on_day_them_button_text">Дневная тема</string>
    <string name="turn_on_night_them_button_text">Ночная тема</string>
    <string name="return_button_text">Установить</string>
    <string name="menu_message_text">Выберите тему калькулятора</string>
    <string name="author_info_text">Разработчик научного калькулятора Хахалин Андрей Владимирович, 2021–2022 гг.</string>
    <string name="set_radius_buttons_text">
        <br>Можно ещё задать РАДИУС</br>
        <br>расположения кнопок в dp</br>
        <br>(по-умолчанию 131 dp):</br>
    </string>
    <string name="default_radius_text">131</string>
    <string name="error_message_title_in_string_type_text">ошибка в самих данных</string>
    <string name="error_message_title_inputting_type_text">ошибка ввода данных</string>
</resources>