<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/run_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/_background_theme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_calc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_0"
        style="@style/numbers_style"
        android:text="@string/_0"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintEnd_toStartOf="@id/_1"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_1"
        style="@style/numbers_style"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/_2"
        app:layout_constraintCircleAngle="30"
        app:layout_constraintStart_toEndOf="@id/_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_2"
        style="@style/numbers_style"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@id/_RESULT"
        app:layout_constraintCircleAngle="60"
        app:layout_constraintStart_toEndOf="@id/_RESULT" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_3"
        style="@style/numbers_style"
        android:text="@string/_3"
        app:layout_constraintCircleAngle="90"
        app:layout_constraintStart_toEndOf="@id/_RESULT"
        app:layout_constraintTop_toBottomOf="@id/_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_4"
        style="@style/numbers_style"
        android:text="@string/_4"
        app:layout_constraintCircleAngle="120"
        app:layout_constraintStart_toEndOf="@id/_RESULT"
        app:layout_constraintTop_toBottomOf="@id/_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_5"
        style="@style/numbers_style"
        android:text="@string/_5"
        app:layout_constraintCircleAngle="150"
        app:layout_constraintEnd_toStartOf="@id/_4"
        app:layout_constraintTop_toBottomOf="@id/_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_6"
        style="@style/numbers_style"
        android:text="@string/_6"
        app:layout_constraintCircleAngle="180"
        app:layout_constraintEnd_toStartOf="@id/_5"
        app:layout_constraintTop_toBottomOf="@id/_equal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_7"
        style="@style/numbers_style"
        android:text="@string/_7"
        app:layout_constraintCircleAngle="210"
        app:layout_constraintEnd_toStartOf="@id/_6"
        app:layout_constraintTop_toBottomOf="@id/_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_8"
        style="@style/numbers_style"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@id/_7"
        app:layout_constraintCircleAngle="240"
        app:layout_constraintEnd_toStartOf="@id/_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_9"
        style="@style/numbers_style"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@id/_8"
        app:layout_constraintCircleAngle="270"
        app:layout_constraintEnd_toStartOf="@id/_RESULT" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_divide"
        style="@style/actions_style"
        android:text="@string/_divide"
        app:layout_constraintBottom_toTopOf="@id/_RESULT"
        app:layout_constraintCircle="@id/_RESULT"
        app:layout_constraintCircleAngle="300"
        app:layout_constraintCircleRadius="@dimen/ButtonCircle_radius"
        app:layout_constraintEnd_toStartOf="@id/_RESULT" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_minus"
        style="@style/actions_style"
        android:text="@string/_minus"
        app:layout_constraintBottom_toTopOf="@id/_divide"
        app:layout_constraintCircle="@id/_RESULT"
        app:layout_constraintCircleAngle="330"
        app:layout_constraintCircleRadius="@dimen/ButtonCircle_radius"
        app:layout_constraintEnd_toStartOf="@id/_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_zapitay"
        style="@style/actions_style"
        android:text="@string/_zapitay"
        app:layout_constraintEnd_toEndOf="@id/_stepen"
        app:layout_constraintStart_toEndOf="@id/_plus_minus"
        app:layout_constraintTop_toBottomOf="@id/_bracket_open" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_multiply"
        style="@style/actions_style"
        android:text="@string/_multiply"
        app:layout_constraintEnd_toStartOf="@id/_divide"
        app:layout_constraintTop_toTopOf="@id/_divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_plus"
        style="@style/actions_style"
        android:text="@string/_plus"
        app:layout_constraintEnd_toStartOf="@id/_minus"
        app:layout_constraintTop_toTopOf="@id/_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_bracket_open"
        style="@style/actions_style"
        android:text="@string/_bracket_open"
        app:layout_constraintStart_toEndOf="@id/_1"
        app:layout_constraintTop_toTopOf="@id/_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_bracket_close"
        style="@style/actions_style"
        android:text="@string/_bracket_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/_2"
        app:layout_constraintTop_toTopOf="@id/_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_percent"
        style="@style/actions_style"
        android:text="@string/_percent"
        app:layout_constraintStart_toEndOf="@id/_5"
        app:layout_constraintTop_toBottomOf="@id/_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_plus_minus"
        style="@style/actions_style"
        android:text="@string/_plus_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/_4"
        app:layout_constraintTop_toTopOf="@id/_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_stepen"
        style="@style/actions_style"
        android:text="@string/_stepen"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/_8"
        app:layout_constraintTop_toTopOf="@id/_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_sqrt"
        style="@style/actions_style"
        android:text="@string/_sqrt"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/_7"
        app:layout_constraintTop_toBottomOf="@id/_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_equal"
        style="@style/actions_style"
        android:text="@string/_equal"
        app:layout_constraintBottom_toTopOf="@id/_6"
        app:layout_constraintEnd_toStartOf="@id/_5"
        app:layout_constraintStart_toEndOf="@id/_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_backspace_one"
        style="@style/actions_style"
        android:text="@string/_backspaceOne"
        android:textColor="@color/red_erase"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/_input_history"
        app:layout_constraintEnd_toStartOf="@id/_backspace_two"
        app:layout_constraintTop_toBottomOf="@id/_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_backspace_two"
        style="@style/actions_style"
        android:text="@string/_backspaceTwo"
        android:textColor="@color/red_erase"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/_input_history"
        app:layout_constraintEnd_toStartOf="@id/_backspace"
        app:layout_constraintTop_toBottomOf="@id/_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_backspace"
        style="@style/actions_style"
        android:text="@string/_backspace"
        android:textColor="@color/red_erase"
        app:layout_constraintBottom_toTopOf="@id/_input_history"
        app:layout_constraintEnd_toEndOf="@id/_input_history" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_menu_theme"
        style="@style/menu_style"
        android:layout_width="150dp"
        android:text="@string/_settings"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/_input_history"
        app:layout_constraintStart_toStartOf="@id/_input_history" />

    <TextView
        android:id="@+id/_RESULT"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_result_text"
        android:background="@drawable/background_result_textview"
        android:ems="6"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/padding_output_text"
        android:text="@string/RESULT_text"
        android:textColor="@color/red_erase"
        android:textSize="@dimen/ResultHistoryText_size"
        app:layout_constraintBottom_toTopOf="@id/_equal"
        app:layout_constraintEnd_toStartOf="@id/_3"
        app:layout_constraintStart_toEndOf="@id/_9"
        app:layout_constraintTop_toTopOf="@id/_zapitay" />

    <HorizontalScrollView
        android:id="@+id/_input_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_backspace_two">

        <TextView
            android:id="@+id/_inputed_history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/InputHistoryMargin_left"
            android:background="@drawable/background_input_history"
            android:ems="13"
            android:paddingStart="@dimen/padding_output_text"
            android:text="@string/InputHistory_text"
            android:textColor="@color/red_erase"
            android:textSize="@dimen/ResultHistoryText_size" />
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>