<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.MenuActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/_background_theme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_calc" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/_menu_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_message_text"
        android:textSize="@dimen/menu_message_text_size"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/red_erase_night"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/_day_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_day_theme"
        style="@style/Day.Menu_style"
        android:layout_width="@dimen/menu_button_width"
        android:text="@string/turn_on_day_them_button_text"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@id/_menu_message"
        app:layout_constraintBottom_toTopOf="@id/_night_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_night_theme"
        style="@style/Night.Menu_style"
        android:layout_width="@dimen/menu_button_width"
        android:text = "@string/turn_on_night_them_button_text"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/_day_theme"
        app:layout_constraintBottom_toTopOf="@id/_return_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_return_day"
        style="@style/Day.Menu_style"
        android:layout_width="@dimen/menu_button_width"
        android:text = "@string/return_button_text"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/_night_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/_return_night"
        style="@style/Night.Menu_style"
        android:layout_width="@dimen/menu_button_width"
        android:text = "@string/return_button_text"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/_night_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>